<resources>
    <string name="app_name">ToDo</string>
    <string name="logo">Logo</string>

    <!-- Welcome -->
    <string name="hint">Enter your name (eg. Ammar)</string>
    <string name="done">Done</string>

    <!-- Main Activity -->
    <string name="add">Add</string>
    <string name="welcome_back">Welcome back, %s</string>
    <string name="welcome_num">You have %d ToDos in the list today</string>
    <string name="hide">Hide</string>
    <string name="todo">ToDo</string>
    <string name="home">Home</string>
    <string name="not_yet">No %s here</string>

    <!-- Bottom Sheet -->
    <string name="bs_title">%s ToDo</string>
    <string name="_new">New</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="tags">Tags</string>
    <string name="work">Work</string>
    <string name="study">Study</string>
    <string name="plus">+</string>
    <string name="deadline">Deadline</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="_24_hours">24 Hours (tomorrow)</string>
    <string name="save">Save</string>

    <!-- Details -->
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="details">Details</string>

    <!-- Shared Preference -->
    <string name="pref_file_key">Pref_File_key</string>
    <string name="pref_user_key">Pref_User_key</string>
    <string name="edit_user">Edit username</string>

    <!-- Confirm Dialog -->
    <string name="header">Header</string>
    <string name="body">Body</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="keep">Keep</string>
</resources>